syntax = "proto3";

option csharp_namespace = "Application";

package Authentication;

service Authentication {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetVerificationKey(VerificationKeyRequest) returns (VerificationKeyResponse);
}

// register
message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string firstName = 4;
    string lastName = 5;
}

message RegisterResponse {
    uuid userId = 1;
}

// login
message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string userId = 1;
    string token = 2;
}

// verification key
message VerificationKeyRequest {
}

message VerificationKeyResponse {
    string key = 1;
}
